// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedSearchPage renders correctly 1`] = `
<SearchPage
  history={
    Object {
      "push": [Function],
    }
  }
  location={
    Object {
      "search": "?query=test",
    }
  }
  results={Array []}
  searchRequest={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": [Function],
    }
  }
/>
`;

exports[`UnconnectedSearchPage renders correctly after \`searchRequest\` finishes successfully 1`] = `
<Segment
  basic={true}
  loading={false}
  style={
    Object {
      "margin": "10px auto",
      "maxWidth": "90%",
    }
  }
>
  <SearchResultTable
    onTableRowClick={[Function]}
    results={Array []}
  />
</Segment>
`;

exports[`UnconnectedSearchPage renders correctly after \`searchRequest\` finishes with failure 1`] = `
<Segment
  basic={true}
  loading={false}
  style={
    Object {
      "margin": "10px auto",
      "maxWidth": "90%",
    }
  }
>
  <ErrorMessage
    showHeader={true}
    text=""
  />
</Segment>
`;

exports[`UnconnectedSearchPage renders correctly before \`searchRequest\` finishes 1`] = `
<Segment
  basic={true}
  loading={true}
  style={
    Object {
      "margin": "10px auto",
      "maxWidth": "90%",
    }
  }
>
  <SearchResultTable
    onTableRowClick={[Function]}
    results={Array []}
  />
</Segment>
`;
